<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.virtualfudge.clickthegreensquare.WinScreen">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youWin"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"/>

    <TextView android:text="@string/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/score"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView android:text="@string/bestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/best"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry_button"
        android:id="@+id/retry_button"
        android:layout_above="@+id/menu_button"
        android:layout_centerHorizontal="true"
        android:onClick="restartGame"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        android:id="@+id/menu_button"
        style="@style/MainButton"
        android:onClick="startMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>
